getting rid of non-runnable test